responsiveness settings widget + solved bug propagation on mobile, all methods working properly

--- a/src/components/content/apps/AboutMe/AboutMe.module.css
+++ b/src/components/content/apps/AboutMe/AboutMe.module.css
@@ -169,9 +169,6 @@
     display: none;
   }
 
-  .left_corner_button_close {
-    width: 20px;
-  }
 
   .wrapper {
     width: 90vw;
